# api-airport

./: .env.sample  README.md  compose.yaml  port_fixtures_expanded.json  pyproject.toml  requirements.txt
airport/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
airport/migrations/: 0001_initial.py
airport/tests/: test_models.py  test_serializers.py  test_views.py
base/: models.py
core/: settings.py  urls.py
user/: models.py
user/migrations/: 0001_initial.py  0002_alter_user_changed_at_alter_user_created_at.py
user/tests/: test_permissions.py  test_user_model.py  test_user_serializer.py  test_user_view.py
